# Edge-LLM

./: .dockerignore  .gitattributes  .gitignore  README.md  dataset.txt  docker-compose.yml  install.sh  pyproject.toml  requirements-high-quality.txt  requirements-standard.txt  requirements.txt
cli/: cli.py
docker/: Dockerfile  docker-compose.yml
docs/diagrams/: architecture.mmd  request-lifecycle.mmd
ios/llama-ios-skeleton/: Bridging-Header.h  INTEGRATION.md  INTEGRATION_XCFRAMEWORK.md  Package.swift  README.md  README_EDGE_LLM_IOS.md
ios/llama-ios-skeleton/LLamaCppBinaryPackage/: Package.swift  README.md
ios/llama-ios-skeleton/diagrams/: architecture.mmd
ios/llama-ios-skeleton/scripts/: copy_xcframework_to_package.sh  create_xcframework.sh  fetch_build_llama.sh  open_in_xcode.sh  prepare_spm_sources.sh  run_ios_sim.sh  setup_build_open.sh  (+1 more)
ios/llama-ios-skeleton/tools/host_simple/: CMakeLists.txt  README.md  build_and_run.sh  main.cpp
mobile/android/: .gitignore  MainActivity.kt  README.md  settings.gradle
mobile/ios/: ChatMessage.swift  EdgeLLMOnDeviceChatView.swift  EdgeLLMOnDeviceChatViewModel.swift  EdgeLLMiOSApp.swift  OnDeviceChatEngine.swift  README.md  ViewController.swift
model/: model.py  transformer.py
models/: README.md
profiles/: high-quality.env  lite.env  standard.env
rag/: rag_pipeline.py
runtime/: config.py
scheduler/: batching_engine.py  request.py  scheduler.py
scripts/: generate_ios_project.rb  preflight.py  run_demo.sh  run_ios_demo.sh  smoke_test.py  start_profile.sh  validate_profiles.sh
server/: api_server.py  websocket_server.py
src/benchmarks/: benchmark_latency.py  benchmark_memory.py  benchmark_tokens.py
src/cli/: cli.py
src/convert/: hf_loader.py
src/generation/: sampler.py  speculative.py
src/kernels/: flash_attention.py  int4_quant.py
src/rag/: embedder.py  ingest.py  rag_pipeline.py  vector_store.py
src/runtime/: device.py  kv_cache.py  paged_allocator.py  rope.py  tokenizer.py
src/server/: api_server.py  websocket_server.py
src/tokenizer/: merges.txt  vocab.json
src/training/: trainer.py
src/voice/: stt.py  tts.py
training/: dataset.py  tokenizer_train.py  trainer.py
ui/chat-app/: package-lock.json  package.json
voice/: stt.py  tts.py  voice_chat.py
(+30 files in other folders)
