[project]
name = "edge-llm"
version = "0.1.0"
description = "Edge optimized local LLM runtime"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.1",
    "httpx==0.28.1",
    "numpy==1.26.4",
    "pydantic==2.12.5",
    "psutil==7.2.2",
    "pyttsx3==2.99",
    "sentence-transformers==5.2.3",
    "sounddevice==0.5.5",
    "tokenizers==0.22.2",
    "torch==2.6.0",
    "transformers==4.57.6",
    "uvicorn==0.41.0",
    "faiss-cpu==1.13.2",
    "vosk==0.3.45",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = {"" = "src"}
include-package-data = true

[project.scripts]
edge-llm = "cli.cli:run_server"
